--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "jest"
+    "start:dev": "ts-node src/deploy-commands && ts-node src/index.ts",
+    "start:prod": "node dist/deploy-commands.js && node dist/index.js",
+    "build": "tsc --build",
+    "build:container": "docker build -t 810ing .",
+    "test": "jest",
+    "run:container": "docker run 810ing -d --name 810ing"
   },
   "repository": {
     "type": "git",
