--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.1",
     "jest": "^28.1.3",
+    "mongoose": "^6.6.0",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
