--- a/package.json
+++ b/package.json
@@ -22,12 +22,8 @@
   },
   "homepage": "https://github.com/DanEager19/810ing#readme",
   "devDependencies": {
-    "@discordjs/builders": "^1.2.0",
-    "@discordjs/rest": "^1.1.0",
     "@types/jest": "^28.1.8",
     "@types/node": "^18.7.13",
-    "discord-api-types": "^0.37.4",
-    "discord.js": "^14.3.0",
     "dotenv": "^16.0.1",
     "jest": "^28.1.3",
     "mongoose": "^6.6.0",
@@ -35,5 +31,11 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "yarn": "^1.22.19"
+  },
+  "dependencies": {
+    "discord.js": "^14.3.0",
+    "@discordjs/builders": "^1.2.0",
+    "@discordjs/rest": "^1.1.0",
+    "discord-api-types": "^0.37.8"
   }
 }
