--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc --build",
     "build:container": "docker build -t 810ing .",
     "test": "jest",
-    "run:container": "docker run 810ing -d --name 810ing"
+    "run:container": "docker run 810ing -d --name 810ing",
+    "pgen": "npx prisma generate"
   },
   "repository": {
     "type": "git",
@@ -22,13 +23,11 @@
   },
   "homepage": "https://github.com/DanEager19/810ing#readme",
   "devDependencies": {
-    "@prisma/client": "^4.3.1",
     "@types/jest": "^28.1.8",
     "@types/node": "^18.7.13",
     "dotenv": "^16.0.2",
     "jest": "^28.1.3",
     "mongoose": "^6.6.0",
-    "prisma": "^4.3.1",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
